Aggiunta validazione ed inizio stile con css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Esercitazione di Alberto Pertusi</title>
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <main class="container">
       <form action="dummy.php" id="submit-form">
+        <h1>Form di Registrazione</h1>
+        <hr />
         <section>
           <label for="nome">Nome</label>
           <input type="text" maxlength="25" id="nome" name="nome" />
