Aggiunto stile css

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
       <form action="dummy.php" id="submit-form">
         <h1>Form di Registrazione</h1>
         <hr />
-        <section>
+        <section class="form-group">
           <label for="nome">Nome</label>
           <input type="text" maxlength="25" id="nome" name="nome" />
         </section>
-        <section>
+        <section class="form-group">
           <label for="cognome">Cognome</label>
           <input type="text" maxlength="30" id="cognome" name="cognome" />
         </section>
-        <section>
+        <section class="form-group">
           <label for="matricola">Matricola</label>
           <input type="text" maxlength="8" id="matricola" name="matricola" />
         </section>
-        <section>
+        <section class="form-group">
           <label for="data-di-nascita">Data di Nascita</label>
           <input type="date" id="data-di-nascita" name="data-di-nascita" />
         </section>
-        <section>
+        <section class="form-group">
           <label for="regione-di-nascita">Regione di Nascita</label>
           <select id="regione-di-nascita" name="regione-di-nascita">
             <option selected></option>
@@ -53,11 +53,11 @@
             <option>Veneto</option>
           </select>
         </section>
-        <section>
+        <section class="form-group">
           <label for="email">Email</label>
           <input type="email" maxlength="30" id="email" name="email" />
         </section>
-        <section>
+        <section class="form-submit">
           <button type="submit" id="submit-button">Invio</button>
           <button type="reset">Annulla</button>
         </section>
